--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <i>Description:</i> Will trent basiert auf den Büchern von Karin Slaughter geht es um einen Detective, der als ehemaliges Waisenkind funktioneller Analphabet ist. Auch er adoptiert einen Hund (Betty, Chihuahua).
             </p>
             <!-- link -->
-            <a href="https://amzn.to/3SyY0k2" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color: #00a6ff">Disney Link fehlt noch</a>
+            <a href="https://www.disneyplus.com/de-de/series/will-trent/ZpFd7uSNh1d0" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color: #00a6ff">Auf Disney streamen</a>
             <a href="https://www.imdb.com/title/tt17543592/" target="_blank" class="f6 link" style="color:black">
                 Mehr Infos
             </a>    
