--- a/index.html
+++ b/index.html
@@ -73,4 +73,26 @@
         </div>
     </div>  
 
+    <div class="dt-row ">
+        <div class="fl w-10 pa2v-btm  pa2">
+            
+        </div>
+        <div class="fl w-50 pa2">
+            <p class="lh-copy">
+                <b>Watchlist</b> <br>
+                <i>Eine unsortierte Liste an Filmen und Serien, die spannend klingen</i><br>
+                <ul>
+                    <li>Raised by Wolves</li>
+                    <li>Beef</li>
+                </ul>
+            </p>
+            <!-- link -->
+            <a href="https://www.disneyplus.com/de-de/series/will-trent/ZpFd7uSNh1d0" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color: #00a6ff">Auf Disney streamen</a>
+            <a href="https://www.imdb.com/title/tt17543592/" target="_blank" class="f6 link" style="color:black">
+                Mehr Infos
+            </a>    
+            <hr class="mw5 bb b--black-10"> 
+        </div>
+    </div>  
+
 </article>
