--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
 
 <!-- header -->
-<h1>Serien & Filme</h1>
-
+<header class=" pa3-ns">
+    <h1 class="f2 f1-ns lh-title mt0 mb0 tc">Serien &amp; Filme</h1>
+</header>
 
 <!-- we make a table like design using div and flexbox, we add a year column for multiple series, add a field for the poster and name and one for desctiption -->
 
@@ -14,14 +15,14 @@
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
+            <h3>The lost flowers of Alice Hart</h3>
             <p class="lh-copy">
-                <b>The lost flowers of Alice Hart</b> <br>
                 <i>Genre:</i> Drama, Coming of Age <br>
                 <i>Rating:</i> Still Watching <br>
                 <i>Description:</i> In der 8 teiligen Miniserie <i>"The lost flowers of Alice Hart"</i> geht es um ein Mädchen, dass nach dem Tod ihrer Eltern bei ihrer Großmutter aufwächst. Sie lernt die Sprache der Blumen und findet sich selbst.
             </p>
             <!-- link -->
-            <a href="https://amzn.to/3uaf9GL" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color:#E50914">auf Netflix streamen</a>
+            <a href="https://amzn.to/3uaf9GL" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color:#00a6ff">auf Amazon streamen</a>
             <a href="https://www.themoviedb.org/tv/125816-the-lost-flowers-of-alice-hart?language=de-DE" target="_blank" class="f6 link" style="color:black">
                 Mehr Infos
             </a>
@@ -31,8 +32,8 @@
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
+            <h3>Bodies</h3>
             <p class="lh-copy">
-                <b>Bodies</b> <br>
                 <i>Genre:</i> Thriller, Mystery <br>
                 <i>Rating:</i> 10/12 Monkies <br>
                 <i>Description:</i> In der Miniserie <i>"Bodies"</i> taucht die gleiche Leiche in 4 unterschiedlichen Jahren an der gleichen Stelle auf. Es geht um Zeitreise, einen Kult und den freien Willen.
@@ -49,8 +50,8 @@
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
+            <h3>Collin from Accounts</h3> <br>
             <p class="lh-copy">
-                <b>Collin from Accounts</b> <br>
                 <i>Genre:</i> Comedy, Sitcom <br>
                 <i>Rating:</i> IPA mit Grapefruitnote <br>
                 <i>Description:</i> Durch einen Autounfall bei dem Collin verletzt wird kreuzen sich die ungleichen Leben von Ashley und Gorden. 
@@ -67,8 +68,8 @@
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
+            <h3>Will Trent</h3>
             <p class="lh-copy">
-                <b>Will Trent</b> <br>
                 <i>Genre:</i> Crime, Detective <br>
                 <i>Rating:</i> 85% Dyslexic <br>
                 <i>Description:</i> Will trent basiert auf den Büchern von Karin Slaughter geht es um einen Detective, der als ehemaliges Waisenkind funktioneller Analphabet ist. Auch er adoptiert einen Hund (Betty, Chihuahua).
@@ -84,8 +85,8 @@
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
+            <h3>Watchlist</h3>
             <p class="lh-copy">
-                <b>Watchlist</b> <br>
                 <i>Eine unsortierte Liste an Filmen und Serien, die spannend klingen</i><br>
                 <ul>
                     <li>Raised by Wolves</li>
