--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
+            <h3>What we do in the shadows</h3>
+            <p class="lh-copy">
+                <i>Genre:</i> Vampire sitcom <br>
+                <i>Rating:</i> 4/5 roommates have no reflection <br>
+                <i>Description:</i> Mockumentary über eine WG aus Vampieren.
+            </p>
+            <!-- link -->
+            <a href="https://www.disneyplus.com/de-de/series/what-we-do-in-the-shadows/40SsBvhCRbp1" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color:#00a6ff">auf Disney sehen</a>
+            <a href="https://www.imdb.com/title/tt7908628/" target="_blank" class="f6 link" style="color:black">
+                Mehr Infos
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div> 
+    </div>  
+
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
             <h3>The lost flowers of Alice Hart</h3>
             <p class="lh-copy">
                 <i>Genre:</i> Drama, Coming of Age <br>
