--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
                 <ul>
                     <li>Raised by Wolves</li>
                     <li>Beef</li>
+                    <a href="https://www.youtube.com/watch?v=BF_J3-DmiS0">Love Lies Bleeding</a>
+                    <a href="https://www.youtube.com/watch?v=8KVsaoveTbw">The Iron Claw</a>
                 </ul>
             </p>
             <!-- link -->
