--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 </header>
 
 <!-- we make a table like design using div and flexbox, we add a year column for multiple series, add a field for the poster and name and one for desctiption -->
+<article class="cf ph3 ph5-ns pv5">
+    <header class="fn fl-ns fl w-20 pa2">
+      <h1 class="mb3 mt0 lh-title">2024</h1>
+    </header>
+
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
+            <h3>Quiz Lady</h3>
+            <p class="lh-copy">
+                <i>Genre:</i>Comedy <br>
+                <i>Rating:</i> 9/10 Questions correct <br>
+                <i>Description:</i> Just like John Wick, Anne has her dog kidnapped. But her superpower is not guns, but quizzes.
+            </p>
+            <!-- link -->
+            <a href="https://www.disneyplus.com/de-de/series/what-we-do-in-the-shadows/40SsBvhCRbp1" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color:#00a6ff">auf Disney sehen</a>
+            <a href="https://www.imdb.com/title/tt7908628/" target="_blank" class="f6 link" style="color:black">
+                Mehr Infos
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div> 
+    </div>  
+</article>
 
 <article class="cf ph3 ph5-ns pv5">
     <header class="fn fl-ns fl w-20 pa2">
