added poor things

--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <h1 class="f2 f1-ns lh-title mt0 mb0 tc">Serien &amp; Filme</h1>
 </header>
 
+
 <!-- we make a table like design using div and flexbox, we add a year column for multiple series, add a field for the poster and name and one for desctiption -->
 <article class="cf ph3 ph5-ns pv5">
     <header class="fn fl-ns fl w-20 pa2">
       <h1 class="mb3 mt0 lh-title">2024</h1>
     </header>
+
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
+            <h3>Poor Things</h3>
+            <p class="lh-copy">
+                <i>Genre:</i>Comedy <br>
+                <i>Rating:</i> 25/24 Oscar awards <br>
+                <i>Description:</i> Poor Things is the new movie by Yorgos Lanthimos. 
+                It is a surrealist comedy that is based on the novel by Alasdair Gray.
+            </p>
+            <!-- link -->
+            <a href="https://www.imdb.com/title/tt14230458/" target="_blank" class="f6 link" style="color:black">
+                Mehr Infos
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div> 
+    </div>  
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
