--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
+            <h3>Extraordinary</h3>
+            <p class="lh-copy">
+                <i>Genre:</i>Comedy <br>
+                <i>Rating:</i> 9/10 got superpowers <br>
+                <i>Description:</i> In Extraordinary, all people have superpowers. Some are more usefull, such as beeing able to fly or shapeshift.
+                Some are more bizarre, such as summoning fish or breathing helium.
+                Jen, the protagonist, has no such superpowers.
+            </p>
+            <!-- link -->
+            <a href="https://www.imdb.com/title/tt14230458/" target="_blank" class="f6 link" style="color:black">
+                Mehr Infos
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div> 
+    </div>  
+
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
             <h3>Poor Things</h3>
             <p class="lh-copy">
                 <i>Genre:</i>Comedy <br>
