added american fiction

--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
 
     <div class="dt-row ">
         <div class="fl w-50 pa2">
+            <h3>American Fiction</h3>
+            <p class="lh-copy">
+                <i>Genre:</i>Comedy <br>
+                <i>Rating:</i> 8/10 Stereotypes <br>
+                <i>Description:</i> American Fiction is a comedy about a writer who is talented, but his books dont sell to well.
+                He is trying to make a joke about racial stereotypes by writing the most cliché book he can think of.
+                To his surprise, it becomes a bestseller.
+            </p>
+            <!-- link -->
+            <a href="https://www.imdb.com/title/tt23561236/" target="_blank" class="f6 link" style="color:black">
+                Mehr Infos
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div> 
+    </div>  
+
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
             <h3>Extraordinary</h3>
             <p class="lh-copy">
                 <i>Genre:</i>Comedy <br>
