--- a/index.html
+++ b/index.html
@@ -13,6 +13,60 @@
       <h1 class="mb3 mt0 lh-title">2024</h1>
     </header>
 
+    <!-- Ted Lasso -->
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
+            <h3>Ted Lasso</h3>
+            <p class="lh-copy">
+                <i>Genre:</i> Comedy, Sports <br>
+                <i>Description:</i> Ted Lasso is a comedy series about an American football coach who is hired to coach a soccer team in England.
+                The show is about the culture clash between the two sports and the two countries.
+                I personally love the show, because of the unbreakable positive attitude of the main character.
+            </p>
+            <!-- link -->
+            <a href="https://www.imdb.com/title/tt13210838/" target="_blank" class="f6 link" style="color:black">
+                More Info
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div>
+    </div>
+
+    <!-- The Gentlemen -->
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
+            <h3>The Gentlemen</h3>
+            <p class="lh-copy">
+                <i>Genre:</i> Comedy, Gangsterstory <br>
+                <i>Description:</i> The 2024 series is a spinoff of the 2019 movie "The Gentlemen" by Guy Ritchie.
+                It tells the story of an aristocrat that ends up in the criminal underworld of UK.
+            </p>
+            <!-- link -->
+            <a href="https://www.imdb.com/title/tt13210838/" target="_blank" class="f6 link" style="color:black">
+                More Info
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div>
+    </div>
+
+    <!-- civil war -->
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
+            <h3>Civil War</h3>
+            <p class="lh-copy">
+                <i>Genre:</i> Action, Drama <br>
+                <i>Rating:</i> 5/5 stars <br>
+                <i>Description:</i> Civil War tells the story of a conflict in the US seen through the lens of a war photographer.
+                It feels more like a realistic roadtrip movie, than an action packed blockbuster.
+                Alex Garland, who also directed 28 Days later, is able to create a very intense atmosphere.
+            </p>
+            <!-- link -->
+            <a href="https://www.imdb.com/title/tt17279496/" target="_blank" class="f6 link" style="color:black">
+                More Info
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div>
+    </div>
+
     <div class="dt-row ">
         <div class="fl w-50 pa2">
             <h3>American Fiction</h3>
@@ -25,7 +79,7 @@
             </p>
             <!-- link -->
             <a href="https://www.imdb.com/title/tt23561236/" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>
             <hr class="mw5 bb b--black-10">     
         </div> 
@@ -43,7 +97,7 @@
             </p>
             <!-- link -->
             <a href="https://www.imdb.com/title/tt14531842/" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>
             <hr class="mw5 bb b--black-10">     
         </div> 
@@ -60,7 +114,7 @@
             </p>
             <!-- link -->
             <a href="https://www.imdb.com/title/tt14230458/" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>
             <hr class="mw5 bb b--black-10">     
         </div> 
@@ -77,7 +131,7 @@
             <!-- link -->
             <a href="https://www.disneyplus.com/de-de/movies/quiz-lady/2payC3msb8dU" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color:#00a6ff">auf Disney sehen</a>
             <a href="https://www.imdb.com/title/tt13405810/" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>
             <hr class="mw5 bb b--black-10">     
         </div> 
@@ -100,7 +154,7 @@
             <!-- link -->
             <a href="https://www.disneyplus.com/de-de/series/what-we-do-in-the-shadows/40SsBvhCRbp1" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color:#00a6ff">auf Disney sehen</a>
             <a href="https://www.imdb.com/title/tt7908628/" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>
             <hr class="mw5 bb b--black-10">     
         </div> 
@@ -117,7 +171,7 @@
             <!-- link -->
             <a href="https://amzn.to/3uaf9GL" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color:#00a6ff">auf Amazon streamen</a>
             <a href="https://www.themoviedb.org/tv/125816-the-lost-flowers-of-alice-hart?language=de-DE" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>
             <hr class="mw5 bb b--black-10">     
         </div> 
@@ -134,7 +188,7 @@
             <!-- link -->
             <a href="https://www.netflix.com/title/81252916" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color:#E50914">auf Netflix streamen</a>
             <a href="https://www.themoviedb.org/tv/233629-bodies" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>
             <hr class="mw5 bb b--black-10">     
         </div> 
@@ -153,7 +207,7 @@
             <!-- link -->
             <a href="https://amzn.to/3SyY0k2" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color: #00a6ff">Bei Amazon Prime sehen</a>
             <a href="https://www.imdb.com/title/tt18228732/reviews?ref_=tt_urv" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>    
             <hr class="mw5 bb b--black-10"> 
         </div>
@@ -170,7 +224,7 @@
             <!-- link -->
             <a href="https://www.disneyplus.com/de-de/series/will-trent/ZpFd7uSNh1d0" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color: #00a6ff">Auf Disney streamen</a>
             <a href="https://www.imdb.com/title/tt17543592/" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>    
             <hr class="mw5 bb b--black-10"> 
         </div>
@@ -191,7 +245,7 @@
             <!-- link -->
             <a href="https://www.disneyplus.com/de-de/series/will-trent/ZpFd7uSNh1d0" class="f6 link dim br1 ph3 pv2 mb2 dib" target="_blank" style="color: #00a6ff">Auf Disney streamen</a>
             <a href="https://www.imdb.com/title/tt17543592/" target="_blank" class="f6 link" style="color:black">
-                Mehr Infos
+                More Info
             </a>    
             <hr class="mw5 bb b--black-10"> 
         </div>
