--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
       <h1 class="mb3 mt0 lh-title">2024</h1>
     </header>
 
+        <!-- The Holdover -->
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
+            <h3>The Holdovers</h3>
+            <p class="lh-copy">
+                <i>Genre:</i> Comedy <br>
+                <i>Description:</i> 
+                In The Holdovers, Paul Giamatti stars as a grumpy teacher tasked with supervising students who can't go home during the Christmas holidays. 
+                While most students leave for a ski trip, only one remains behind, leading to bonding between the unlikely companions.
+
+            </p>
+            <!-- link -->
+            <a href="https://www.imdb.com/title/tt14849194/" target="_blank" class="f6 link" style="color:black">
+                More Info
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div>
+    </div>
+
     <!-- Ted Lasso -->
     <div class="dt-row ">
         <div class="fl w-50 pa2">
