--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
       <h1 class="mb3 mt0 lh-title">2024</h1>
     </header>
 
-        <!-- The Holdover -->
+    <!-- A Man on the Inside -->
+    <div class="dt-row ">
+        <div class="fl w-50 pa2">
+            <h3>A Man on the Inside</h3>
+            <p class="lh-copy">
+                <i>Genre:</i> Comedy <br>
+                <i>Description:</i> 
+                Michael Schur is known for amazingzing series, such as the office, broklyn 99, the good place. 
+                In his newest creation Ted Danson stars as a retired engineering professor who becomes an undercover investigator to crack the case of the missing necklace in a retirement home.
+            </p>
+            <!-- link -->
+            <a href="https://www.imdb.com/title/tt26670955/" target="_blank" class="f6 link" style="color:black">
+                More Info
+            </a>
+            <hr class="mw5 bb b--black-10">     
+        </div>
+    </div>
+
+    <!-- The Holdover -->
     <div class="dt-row ">
         <div class="fl w-50 pa2">
             <h3>The Holdovers</h3>
